--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -14,6 +14,7 @@
             <li><a routerLink="/exercices/interpolation">Interpolation</a></li>
             <li><a routerLink="/exercices/binding">Binding</a></li>
             <li><a routerLink="/exercices/steven-cigale">Steven Cigale</a></li>
+            <li><a routerLink="/exercices/steven-cigale">Event Binding</a></li>
           </ul>
         </details>
       </li>
