--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -15,6 +15,8 @@
             <li><a routerLink="/exercices/binding">Binding</a></li>
             <li><a routerLink="/exercices/steven-cigale">Steven Cigale</a></li>
             <li><a routerLink="/exercices/steven-cigale">Event Binding</a></li>
+            <li><a routerLink="/exercices/exo-8">Exo 8</a></li>
+            <li><a routerLink="/exercices/exo-directives">Exo Directives</a></li>
           </ul>
         </details>
       </li>
