--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -17,6 +17,7 @@
             <li><a routerLink="/exercices/steven-cigale">Event Binding</a></li>
             <li><a routerLink="/exercices/exo-8">Exo 8</a></li>
             <li><a routerLink="/exercices/exo-directives">Exo Directives</a></li>
+            <li><a routerLink="/exercices/api-pokemon">API POkemon</a></li>
           </ul>
         </details>
       </li>
