Tattoine Angular Version

--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -18,6 +18,7 @@
             <li><a routerLink="/exercices/exo-8">Exo 8</a></li>
             <li><a routerLink="/exercices/exo-directives">Exo Directives</a></li>
             <li><a routerLink="/exercices/api-pokemon">API POkemon</a></li>
+            <li><a routerLink="/exercices/tp-component">Tp Component</a></li>
           </ul>
         </details>
       </li>
