--- a/src/app/pages/task-list-firebase/task-list-firebase.html
+++ b/src/app/pages/task-list-firebase/task-list-firebase.html
@@ -12,7 +12,7 @@
     @for (task of tasks; track task.id) {
       <li class="list-group-item justify-around w-full flex py-3">
         
-        <span class="fw-bold">{{ task.title }}</span>
+        <input [(ngModel)]="task.title" (ngModelChange)="updateTask(task)"  class="form-control me-2" />
 
         <span class="badge" [ngClass]="task.status === 'completed' ? 'bg-success' : 'bg-warning text-dark'">
           {{ task.status }}
