--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -22,6 +22,8 @@
             <li><a routerLink="/exercices/exo-directives">Exo Directives</a></li>
             <li><a routerLink="/exercices/api-pokemon">API POkemon</a></li>
             <li><a routerLink="/exercices/tp-component">Tp Component</a></li>
+            <li><a routerLink="/exercices/randomizer">Randomizer</a></li>
+            <li><a routerLink="/exercices/task-manager">TP Gestionnaire de tâches</a></li>
           </ul>
         </details>
       </li>
